# Vending_Machine

./: .env  Cargo.toml  Makefile  readme.md
scripts/: deploy_contract.sh  interact_contract.sh
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: multitest.rs
