[package]
name = "vending-machine"
authors = []
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = { version = "2.2.0" }
cw-storage-plus = "2.0.0"
schemars = "0.8.21"
cosmwasm-schema = "2.2.0"
serde = { version = "1.0",  default-features = false, features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.9" 

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
